<resources>
    <string name="app_name">androidMKP</string>
    <string name="invalid_password">Password minimal 8 karakter!</string>
    <string name="invalid_nid">NID tidak valid!</string>
    <string name="password_do_not_match">Password tidak cocok!</string>
    <string name="invalid_password_length">Password minimal 8 karakter!</string>
    <string name="slot">Slot</string>
    <string name="kota">Kota</string>
    <string name="lokasi">Lokasi</string>
    <string name="penyelenggara">Penyelenggara</string>
    <string name="proyek">Proyek</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="my_jobs">My Jobs</string>
    <string name="home">Home</string>
    <string name="provinsi_name">Provinsi Name</string>
    <string name="jobs_for_you">Jobs for you</string>
    <string name="temukan_lowongan_yang_tersedia">Temukan lowongan yang tersedia</string>
    <string name="logout">Logout</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="edit_data_diri">Edit Data Diri</string>
    <string name="id">ID</string>
    <string name="profil_diri_anda">Profil diri anda</string>
    <string name="my_profile">My Profile</string>
    <string name="tidak_ada_proyek">Tidak ada proyek</string>
    <string name="pekerjaan_yang_sudah_anda_ambil">Pekerjaan yang sudah anda ambil</string>
    <string name="back">Back</string>
    <string name="helper">Helper</string>
    <string name="machinist">Machinist</string>
    <string name="fitter">Fitter</string>
    <string name="welder">Welder</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="nid">NID</string>
    <string name="provinsi">Provinsi</string>
    <string name="posisi">Posisi</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nama">Nama</string>
    <string name="submit">Submit</string>
    <string name="daftar">Daftar</string>
    <string name="tanggalakhir">tanggalakhir</string>
    <string name="colonsign">:</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="dotsign">•</string>
    <string name="tanggalmulai">tanggalmulai</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="durasi">Durasi</string>
    <string name="tanggal_penting">Tanggal Penting</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="deskripsi_proyek">Deskripsi Proyek</string>
    <string name="kode">Kode</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_lama">Password Lama</string>
    <string-array name="posisi_array">
        <item>Welder</item>
        <item>Fitter</item>
        <item>Helper</item>
        <item>Machinist</item>
    </string-array>
    <string-array name="provinsi_array">
        <item>Provinsi Aceh</item>
        <item>Provinsi Sumatera Utara</item>
        <item>Provinsi Sumatera Barat</item>
        <item>Provinsi Riau</item>
        <item>Provinsi Jambi</item>
        <item>Provinsi Sumatera Selatan</item>
        <item>Provinsi Bengkulu</item>
        <item>Provinsi Lampung</item>
        <item>Provinsi Kepulauan Bangka Belitung</item>
        <item>Provinsi Kepulauan Riau</item>
        <item>Provinsi DKI Jakarta</item>
        <item>Provinsi Jawa Barat</item>
        <item>Provinsi Jawa Tengah</item>
        <item>Provinsi DI Yogyakarta</item>
        <item>Provinsi Jawa Timur</item>
        <item>Provinsi Banten</item>
        <item>Provinsi Bali</item>
        <item>Provinsi Nusa Tenggara Barat</item>
        <item>Provinsi Nusa Tenggara Timur</item>
        <item>Provinsi Kalimantan Barat</item>
        <item>Provinsi Kalimantan Tengah</item>
        <item>Provinsi Kalimantan Selatan</item>
        <item>Provinsi Kalimantan Timur</item>
        <item>Provinsi Sulawesi Utara</item>
        <item>Provinsi Sulawesi Tengah</item>
        <item>Provinsi Sulawesi Selatan</item>
        <item>Provinsi Sulawesi Tenggara</item>
        <item>Provinsi Gorontalo</item>
        <item>Provinsi Sulawesi Barat</item>
        <item>Provinsi Maluku</item>
        <item>Provinsi Maluku Utara</item>
        <item>Provinsi Papua Barat</item>
        <item>Provinsi Papua</item>
    </string-array>
</resources>