<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:elevation="4dp"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient1">

        <!-- Tombol back di kiri -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/proyekName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proyek"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/kode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_corporate_fare_24"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/penyelenggara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penyelenggara"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_handyman_24"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lokasi"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_location_pin_24"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/kota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kota"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_person_24"
                    android:layout_marginEnd="2dp"/>

                <TextView
                    android:id="@+id/slot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slot"
                    android:textColor="@color/red"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_proyek"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loremipsum"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_penting"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow
                    android:paddingVertical="1dip">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dotsign"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/durasi"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colonsign"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/durasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/durasi"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                </TableRow>
                <TableRow
                    android:paddingVertical="1dip">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colonsign"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_mulai"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colonsign"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tanggalmulai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggalmulai"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:paddingVertical="1dip">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dotsign"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_selesai"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="50dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colonsign"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tanggalakhir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggalakhir"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>