<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:layout_marginVertical="7dp"
    app:cardCornerRadius="15dp"
    android:background="@color/navy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/yellow2">

        <TextView
            android:id="@+id/proyekName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proyek"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_corporate_fare_24"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/penyelenggara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penyelenggara"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_handyman_24"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_location_pin_24"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/kota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/kota"
                android:textColor="@android:color/black"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_person_24"
                android:layout_marginEnd="2dp"/>

            <TextView
                android:id="@+id/slot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slot"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
