<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.changepassword.ChangePasswordActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:elevation="4dp"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient1"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Tombol back di kiri -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_lama"
            android:layout_marginTop="10dp"
            android:textColor="@color/black2"/>

        <com.example.androidmkp.customView.PasswordEditText
            android:id="@+id/ed_old_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:background="@drawable/stroke2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_nid"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_baru"
            android:layout_marginTop="10dp"
            android:textColor="@color/black2"/>

        <com.example.androidmkp.customView.PasswordEditText
            android:id="@+id/ed_new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:background="@drawable/stroke2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_nid"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi_password_baru"
            android:layout_marginTop="10dp"
            android:textColor="@color/black2"/>

        <com.example.androidmkp.customView.PasswordEditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:background="@drawable/stroke2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_nid"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@drawable/stroke2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>